--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Boxy - Offline Clipboard Manager</title>
+  <link rel="manifest" href="manifest.json">
   <link rel="stylesheet" href="boxy.css">
 </head>
 <body>
